# sway-workspace

./: Cargo.toml  LICENSE  README.md  default.nix
.github/workflows/: build.yml
src/: main.rs
