[package]
name = "sway-workspace"
version = "0.2.2"
description = "Output aware Sway/i3wm workspace switcher with window move feature"
homepage = "https://github.com/matejc/sway-workspace"
repository = "https://github.com/matejc/sway-workspace"
readme = "README.md"
authors = ["Matej Cotman <matej@matejc.com>"]
license = "BSD-2-Clause"
edition = "2021"
include = [
  "src/*.rs",
  "Cargo.toml",
]

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
ksway = "0.1.0"
serde_json = "1.0.91"
